--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
